Update biryani recipe page with description, ingredients, and steps
Added detailed content to the 'biryani.html' page, including a recipe description, ingredients list, and step-by-step cooking instructions.
Updated the page to provide a complete and informative recipe for Biryani.

--- a/recipes/Biryani.html
+++ b/recipes/Biryani.html
@@ -6,6 +6,41 @@
     </header>
     <body>
         <h1>Biryani</h1>
+        <img src="../images/Biryani.jpg" width="600" height="337" alt="Biryani">
+        <h2>Description :</h2>
+         <p><b>Biryani</b> is a rich and aromatic one-pot dish made from <b>rice, meat (chicken, beef, mutton, or fish)</b>, and a blend of aromatic spices.
+             Its roots can be traced back to the Indian subcontinent, and it has spread to various parts of the world, especially with South Asian migration.
+         </p> 
+         <p>While its exact origins are debated,
+             it is widely believed to have been brought to India by the Mughal emperors, who fused Persian cooking techniques with Indian ingredients.
+         </p>
+        <h2>Ingredients :</h2>
+         <ul>
+         <li>Basmati Rice-2 cups</li>
+         <li>Meat-500 grams</li>
+         <li>Yogurt-1/2 cup</li>
+         <li>Ginger-garlic paste – 1 tbsp</li>
+         <li>Red chili powder – 1-2 tsp</li>
+          <li>Cumin, coriander, garam masala – 1 tsp each</li>
+          <li>Turmeric powder – 1/2 tsp</li>
+          <li>Salt – to taste</li>
+          <li>Lemon juice – 1 tbsp</li>
+          <li>Mint & cilantro – 1/4 cup each</li>
+          <li>Green chilies – 2-3</li>
+          <li>Whole spices (bay leaves, cinnamon, cloves, cardamom, star anise) – a few each</li>
+          <li>Saffron – a pinch (soaked in milk)</li>
+          <li>Fried onions – for garnish</li>
+          <li>Ghee/oil – 2 tbsp each</li>
+          <li>Water – 4 cups (for rice)</li>
+        </ul>
+        <h2>Preparations Steps :</h2>
+        <ol>
+          <li><b>Marinate</b> meat/veggies with yogurt, spices, lemon juice, mint, cilantro, and salt for at least 1 hour.</li>
+          <li><b>Cook rice</b> with whole spices (bay leaves, cardamom, etc.) until 70% done. Drain.</li>
+          <li><b>Fry onions</b> in ghee/oil until golden and crispy. Set aside.</li>
+          <li><b>Layer</b> cooked rice and marinated meat in a pot. Add saffron milk, mint, cilantro, and fried onions.</li>
+          <li><b>Cook on low heat (Dum) </b>for 30-40 minutes until fully cooked.</li>
+        </ol>
     </body>
 
 
