--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/Biryani.html">Biryani</a>
+        <ol>
+            <li><a href="recipes/Biryani.html">Biryani</a></li>
+        </ol>
+        
     </body>
 </html>
