--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ol>
+        <ul>
             <li><a href="recipes/Biryani.html">Biryani</a></li>
-        </ol>
+            <li><a href="recipes/Butter_Chicken.html">Butter Chicken</a></li>
+            <li><a href="recipes/Naatu_Kodi_Pulusu.html">Naatu Kodi Pulusu</a>
+        </ul>
         
     </body>
 </html>
