--- a/recipes/Biryani.html
+++ b/recipes/Biryani.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <header>
+  <a href="../index.html">Home</a> <a href="Butter_Chicken.html">Next</a>
+    <head>
       <meta charset="UTF-8">
       <title>Biryani</title>
-    </header>
+    </head>
     <body>
-        <h1>Biryani</h1>
+      <header><h1>Biryani</h1></header>
+        
         <img src="../images/Biryani.jpg" width="600" height="337" alt="Biryani">
         <h2>Description :</h2>
          <p><b>Biryani</b> is a rich and aromatic one-pot dish made from <b>rice, meat (chicken, beef, mutton, or fish)</b>, and a blend of aromatic spices.
@@ -45,6 +47,6 @@
 
 
 
-<a href="../index.html">Home</a>
+
 
 </html>
